<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200dp"
        android:text="@string/rick_amp_morty"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/characters"
        style="@style/MenuButton"
        android:text="@string/characters" />

    <Button
        android:id="@+id/episodes"
        style="@style/MenuButton"
        android:text="@string/episodes" />

    <Button
        android:id="@+id/locations"
        style="@style/MenuButton"
        android:text="@string/locations" />
</LinearLayout>