<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/nameTV"
        style="@style/CharacterDetailsTextView"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/name"
        style="@style/EpisodeInfo"
        android:layout_weight="1"
        tools:text="Name" />

    <TextView
        android:id="@+id/speciesTV"
        style="@style/CharacterDetailsTextView"
        android:layout_weight="1"
        android:text="@string/species" />

    <TextView
        android:id="@+id/species"
        style="@style/EpisodeInfo"
        android:layout_weight="1"
        tools:text="Species" />

    <TextView
        android:id="@+id/genderTV"
        style="@style/CharacterDetailsTextView"
        android:layout_weight="1"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/gender"
        style="@style/EpisodeInfo"
        android:layout_weight="1"
        tools:text="Gender" />

    <TextView
        android:id="@+id/statusTV"
        style="@style/CharacterDetailsTextView"
        android:layout_weight="1"
        android:text="@string/status" />

    <TextView
        android:id="@+id/status"
        style="@style/EpisodeInfo"
        android:layout_weight="1"
        tools:text="Name" />
</LinearLayout>